# iris-mpc

./: .dockerignore  .env.dist  .env.mpc1.dist  .env.mpc2.dist  .env.mpc3.dist  .env.test  .envrc  .envrc.example  .gitattributes  .gitignore  .policy.yml  .pre-commit-config.yaml  .test.env  .test.hawk0.env  .test.hawk1.env  .test.hawk2.env  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.anon-stats-retention  Dockerfile.anon-stats-server  Dockerfile.arm64.genesis.hawk  Dockerfile.arm64.hawk  Dockerfile.arm64.idle  Dockerfile.arm64.init-db  Dockerfile.arm64.init-db2  Dockerfile.base  Dockerfile.debug  Dockerfile.dev.hawk  Dockerfile.dev.hawk.genesis  Dockerfile.genesis.dev.hawk  Dockerfile.genesis.hawk  Dockerfile.hawk  Dockerfile.hawk.multistage  Dockerfile.hnsw.test.e2e  Dockerfile.initdb  Dockerfile.keymanager  Dockerfile.nccl  Dockerfile.nccl-cuda-12-6  Dockerfile.nocuda  (+35 more)
iris-mpc/: Cargo.toml
iris-mpc-anon-stats-server/: Cargo.toml  start_local.sh
iris-mpc-anon-stats-server/anon_stats_migrations/: 20251023135124_init.down.sql  20251023135124_init.up.sql  20251031151223_1d_lifted.down.sql  20251031151223_1d_lifted.up.sql  20251031151955_2d.down.sql  20251031151955_2d.up.sql  20251031152018_2d_lifted.down.sql  20251031152018_2d_lifted.up.sql
iris-mpc-anon-stats-server/src/: coordination.rs  health.rs  lib.rs  main.rs  sync.rs
iris-mpc-anon-stats-server/src/anon_stats/: mod.rs  store.rs  types.rs
iris-mpc-anon-stats-server/src/config/: mod.rs
iris-mpc-bins/: .gitignore  Cargo.toml  accuracy1.toml  ideal_config.toml  ideal_config2.toml  store_ideal_knn_fhd.txt
iris-mpc-bins/docs/: utils-service-client.md
iris-mpc-bins/docs/iris-mpc-utils/: request_test_cases.md  service-client-assumptions.md  (+4 more)
iris-mpc-common/: Cargo.toml
iris-mpc-common/anon_stats_migrations/: 20251023135124_init.down.sql  20251023135124_init.up.sql  20251031151223_1d_lifted.down.sql  20251031151223_1d_lifted.up.sql  20251031151955_2d.down.sql  20251031151955_2d.up.sql  20251031152018_2d_lifted.down.sql  20251031152018_2d_lifted.up.sql
iris-mpc-common/src/: config.rs  consistency_canary.rs  error.rs  fast_metrics.rs  galois.rs  galois_engine.rs  job.rs  lib.rs  object_store.rs  rerand_offsets.rs  serialization.rs  server_coordination.rs  sorted_edge_ids.rs  test.rs  tracing.rs  vector_id.rs
iris-mpc-common/tests/: serialize_with_sorted_keys.rs  sha256.rs  smpc_request.rs  statistics.rs
iris-mpc-cpu/: .gitignore  Cargo.toml  build.rs
iris-mpc-cpu/benches/: .gitattributes  bench_utils.rs  dot.rs  encoded_neighborhood.rs  hnsw.rs  hnsw_db.rs  networking.rs  ptx_store.rs  rotation_aware.rs  set_hash.rs
iris-mpc-cpu/examples/: bench_collect.rs  hnsw-ex.rs  test_phase_trace.rs
iris-mpc-cpu/migrations/: 20240909105321_init.down.sql  20240909105321_init.up.sql  20240909105323_init.down.sql  20240909105323_init.up.sql  20250219142301_graph_id.down.sql  20250219142301_graph_id.up.sql
iris-mpc-cpu/proto/: party_node.proto
iris-mpc-cpu/src/: database_generators.rs  error.rs  lib.rs  prelude.rs  py_bindings.rs  strawman_worker.rs  utils.rs
iris-mpc-cpu/tests/: aby3_store_remote_conformance.rs  counter_subscriber.rs  deep_id_neighborhoods_format.rs  e2e-anon-stats.rs  e2e.rs  e2e_wal.rs  e2e_wal_readme.md  remote_iris_worker_pool_smoke.rs  strawman_worker_smoke.rs  streaming_s3_integration.rs
iris-mpc-gpu/: Cargo.toml
iris-mpc-gpu/benches/: chacha.rs  matmul.rs  preprocessing.rs  transpose.rs
iris-mpc-gpu/examples/: chacha_rng.rs
iris-mpc-gpu/src/: kernel.cu  lib.rs
iris-mpc-gpu/tests/: bitinject.rs  bucket_2d_aggregation.rs  bucket_2d_threshold.rs  bucket_threshold.rs  buckets.rs  buckets_with_aggregation.rs  compare_and_swap.rs  conditionally_select.rs  e2e-anon-stats.rs  e2e.rs  extract_msb_mod.rs  lift.rs  lift_u16_u32.rs  lift_u16_u32_signed.rs  one_bucket.rs  or_policy.rs  or_tree.rs  shares_encryption.rs  threshold.rs  threshold_and_or_tree.rs
iris-mpc-py/: Cargo.toml  README.md  build.rs  pyproject.toml
iris-mpc-py/examples-py/: test_integration.py
iris-mpc-py/src/: lib.rs
iris-mpc-store/: Cargo.toml
iris-mpc-store/benches/: bench_load.rs
iris-mpc-store/migrations/: 20240709182244_init.up.sql  20240725064334_last_request.down.sql  20241121084719_remove_sequence.sql  20241128150412_add-modified-at.down.sql  20241128150412_add-modified-at.up.sql  20241128150412_add-modified-at.up.sql   20250209200835_wal.down.sql  20250209200835_wal.up.sql  20250211090415_modifications_table.down.sql  20250211090415_modifications_table.up.sql  20250219142301_graph_id.down.sql  20250304120117_add_modification_sns_msg.down.sql  20250304120117_add_modification_sns_msg.up.sql  20250310101530_modifications_table.up.sql  20250313101530_modifications_table_v2.down.sql  20250313101530_modifications_table_v2.up.sql  20250314120117_add_modification_sns_msg.down.sql  20250314120117_add_modification_sns_msg.up.sql
iris-mpc-store/src/: config.rs  lib.rs  loader.rs  rerand.rs  s3_importer.rs  snapshot_reconcile.rs
iris-mpc-test-utils/: Cargo.toml
iris-mpc-test-utils/src/: lib.rs
iris-mpc-upgrade/: Cargo.toml  build.rs
iris-mpc-upgrade-hawk/: Cargo.toml
iris-mpc-upgrade-hawk/src/: lib.rs
iris-mpc-upgrade-hawk/tests/: e2e_genesis.rs  e2e_hawk.rs
iris-mpc-upgrade/benches/: rerandomize.rs  upgrade.rs
iris-mpc-upgrade/protos/: reshare.proto
iris-mpc-upgrade/src/: config.rs  continuous_rerand.rs  db.rs  epoch.rs  lib.rs  packets.rs  prf.rs  rerandomization.rs  reshare.rs  s3_coordination.rs  shamir.rs  share.rs  tripartite_dh.rs  upgrade.rs  utils.rs
iris-mpc-upgrade/tests/: continuous_rerand_e2e.rs  test_utils.rs
iris-mpc-utils/: Cargo.toml  README.md
iris-mpc-utils/src/: constants.rs  convertor.rs  fsys.rs  lib.rs  misc.rs  types.rs
iris-mpc/benches/: chacha.rs  client.rs  client_perf.rs  hawk.rs  matmul.rs
iris-mpc/src/: batch.rs  batch_processing.rs  client.rs  coordinator.rs  iris_processing.rs  lib.rs  message_receiver.rs  utils.rs
iris-mpc/tests/: bitinject.rs  e2e.rs  e2e_hawk_init.rs  extract_msb_mod.rs  lift.rs  or_tree.rs  threshold.rs  threshold_and_or_tree.rs
(+1507 files in other folders)
