[workspace]
members = [
    "iris-mpc",
    "iris-mpc-cpu",
    "iris-mpc-gpu",
    "iris-mpc-common",
    "iris-mpc-upgrade",
    "iris-mpc-store",
    "iris-mpc-py",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/iris-mpc"

[workspace.dependencies]
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.44.0" }
aws-sdk-sns = { version = "1.44.0" }
aws-sdk-sqs = { version = "1.36.0" }
aws-sdk-s3 = { version = "1.66.0" }
aws-sdk-secretsmanager = { version = "1.47.0" }
async-trait = "0.1.83"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3.1"
base64 = "0.22.1"
bytes = "1.5"
bytemuck = { version = "1.17", features = ["derive"] }
dotenvy = "0.15"
eyre = "0.6"
futures = "0.3.30"
hawk-pack = { git = "https://github.com/Inversed-Tech/hawk-pack.git", rev = "ba995e09" }
hex = "0.4.3"
itertools = "0.13"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1"
bincode = "1.3.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
rand = "0.8"
rayon = "1.5.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
static_assertions = "1.1"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "901ea26e478c81e10d5d4355ac628ab7b15afca7" }
thiserror = "1"
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

# Abort on panics rather than unwinding.
# This improves performance and makes panic propagation more reliable.
# bench gets its setting from release, and test from dev.
[profile.release]
panic = 'abort'
debug = 1

[profile.dev]
panic = 'abort'
