[workspace]
members = [
    "iris-mpc",
    "iris-mpc-bins",
    "iris-mpc-common",
    "iris-mpc-cpu",
    "iris-mpc-gpu",
#    "iris-mpc-py",
    "iris-mpc-store",
    "iris-mpc-upgrade",
    "iris-mpc-upgrade-hawk",
    "iris-mpc-utils",
    "iris-mpc-anon-stats-server",
]
 default-members = [
    "iris-mpc",
    "iris-mpc-common",
    "iris-mpc-cpu",
    "iris-mpc-gpu",
    "iris-mpc-store",
    "iris-mpc-upgrade",
    "iris-mpc-upgrade-hawk",
    "iris-mpc-utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/iris-mpc"

[workspace.dependencies]
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.44.0" }
aws-sdk-rds = { version = "1.44.0" }
aws-sdk-sns = { version = "1.44.0" }
aws-sdk-sqs = { version = "1.36.0" }
aws-sdk-s3 = { version = "1.65.0" }
aws-sdk-secretsmanager = { version = "1.47.0" }
async-trait = "0.1.83"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
cudarc = { version = "0.13.4", features = ["cuda-12020", "nccl"] }
chrono = "0.4.42"
base64 = "0.22.1"
bytemuck = { version = "1.17", features = ["derive"] }
data-encoding = "2.6.0"
dotenvy = "0.15"
eyre = "0.6"
futures = "0.3.30"
hex = "0.4.3"
hkdf = "0.12.4"
itertools = "0.13"
metrics = "0.22.1"
metrics-exporter-statsd = "0.7"
num-traits = "0.2"
memmap2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1"
bincode = "1.3.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
sodiumoxide = "0.2.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.8"
rayon = "1.5.1"
ring = "0.17.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustls = { version = "0.23.16", features = ["ring"] }
sha2 = "0.10.8"
static_assertions = "1.1"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "901ea26e478c81e10d5d4355ac628ab7b15afca7" }
thiserror = "1"
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.15"
toml = { version = "0.8.23", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }
iris-mpc-cpu = { path = "./iris-mpc-cpu" }
ampc-actor-utils = { git = "https://github.com/worldcoin/ampc-common.git", rev = "6a363d4962d2df30e6c180b0373f4d87e557a4da"}
ampc-secret-sharing = { git = "https://github.com/worldcoin/ampc-common.git", rev = "6a363d4962d2df30e6c180b0373f4d87e557a4da" }
ampc-server-utils = { git = "https://github.com/worldcoin/ampc-common.git", rev = "6a363d4962d2df30e6c180b0373f4d87e557a4da" }

# Abort on panics rather than unwinding.
# This improves performance and makes panic propagation more reliable.
# bench gets its setting from release, and test from dev.
[profile.release]
panic = 'abort'
debug = 1

[profile.dev]
panic = 'abort'
