[package]
name = "iris-mpc-anon-stats-server"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["env"] }
eyre.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-cpu = { path = "../iris-mpc-cpu" }
itertools.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config = "0.14.0"
dotenvy = "0.15.7"
sqlx.workspace = true
siphasher = "1"
rand.workspace = true
aws-config.workspace = true
aws-sdk-sns.workspace = true
