[package]
name = "iris-mpc-anon-stats-server"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["env"] }
eyre.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config = "0.15.19"
dotenvy = "0.15.7"
