[package]
name = "iris-mpc-common"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-kms.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
clap.workspace = true
rand.workspace = true
bytemuck.workspace = true
eyre.workspace = true
thiserror.workspace = true
rayon.workspace = true
itertools.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
config = "0.14.0"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

reqwest = { workspace = true, features = ["blocking", "json"] }
sodiumoxide = "0.2.7"
hmac = "0.12"
http = "1.1.0"
telemetry-batteries.workspace = true
percent-encoding = "2"
sha2 = "0.10"
tokio-retry = "0.3"
time = { version = "^0.3.6", features = ["formatting", "macros"] }
url = "2"
hex.workspace = true
zeroize = "1.8.1"
wiremock = "0.6.1"
digest = "0.10.7"
ring = "0.17.8"
data-encoding = "2.6.0"
bincode = "1.3.3"
serde-big-array = "0.5.1"
serde_with = "3.11.0"

[dev-dependencies]
float_eq = "1"

[[bin]]
name = "key-manager"
path = "src/bin/key_manager.rs"

[[bin]]
name = "shares-encoding"
path = "src/bin/shares_encoding.rs"

[[bin]]
name = "e2e-input-transform"
path = "src/bin/e2e_input_transform.rs"
