[package]
name = "iris-mpc-common"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["helpers"]
helpers = [
  "dep:aws-config",
  "dep:aws-sdk-kms",
  "dep:aws-sdk-sns",
  "dep:aws-sdk-sqs",
  "dep:aws-sdk-s3",
  "dep:aws-sdk-secretsmanager",
  "dep:reqwest",
]

[dependencies]
aws-config = { workspace = true, optional = true }
aws-sdk-kms = { workspace = true, optional = true }
aws-sdk-sns = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
clap.workspace = true
rand.workspace = true
bytemuck.workspace = true
eyre.workspace = true
thiserror.workspace = true
rayon.workspace = true
itertools.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true
telemetry-batteries.workspace = true
axum.workspace = true

config = { version = "0.15.19", features = ["serde_json"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }
sodiumoxide = "0.2.7"
hmac = "0.12"
http = "1.1.0"
percent-encoding = "2"
sha2 = "0.10"
time = { version = "^0.3.6", features = ["formatting", "macros"] }
url = "2"
hex.workspace = true
zeroize = "1.8.1"
wiremock = "0.6.1"
bincode.workspace = true
serde-big-array.workspace = true
metrics = "0.22.1"
metrics-exporter-statsd = "0.7"
num_cpus = "1.17.0"
futures.workspace = true
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }
ampc-secret-sharing.workspace = true
ampc-actor-utils.workspace = true
ampc-server-utils.workspace = true

[dev-dependencies]
float_eq = "1"
aws-credential-types = "1.2.1"
