[package]
name = "iris-mpc-cpu"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-prng = { git = "https://github.com/tf-encrypted/aes-prng.git", branch = "dragos/display" }
ansi_term = "0.12.1"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "~0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode.workspace = true
bytes = "1.7"
bytemuck.workspace = true
clap.workspace = true
dashmap = "6.1.0"
dotenvy.workspace = true
eyre.workspace = true
futures.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
itertools.workspace = true
num-traits.workspace = true
prost = "0.13"
rand.workspace = true
rand_distr = "0.4.3"
rstest = "0.23.0"
serde.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tonic = "0.12.3"
tracing.workspace = true
tracing-forest = { git = "https://github.com/QnnOkabayashi/tracing-forest.git", rev = "5683eba", features = ["uuid", "chrono", "smallvec", "tokio", "serde", "env-filter"] }
tracing-subscriber.workspace = true
tracing-test = "0.2.5"
uuid.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[build-dependencies]
tonic-build = "0.12.3"

[features]
db_dependent = []

[[bench]]
name = "hnsw"
harness = false

[[example]]
name = "hnsw-ex"

[[bin]]
name = "local_hnsw"
path = "bin/local_hnsw.rs"

[[bin]]
name = "hnsw_algorithm_metrics"
path = "bin/hnsw_algorithm_metrics.rs"

[[bin]]
name = "generate_benchmark_data"
path = "bin/generate_benchmark_data.rs"

[[bin]]
name = "hawk_main"
path = "bin/hawk_main.rs"

[[bin]]
name = "hnsw_network_stats_example"
path = "bin/hnsw_network_stats_example.rs"