[package]
name = "iris-mpc-cpu"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-prng = { git = "https://github.com/tf-encrypted/aes-prng.git", branch = "dragos/display" }
ansiterm = "0.12.2"
async-channel = "2.3.1"
async-trait = "~0.1"
aws-sdk-s3.workspace = true
blake3 = "1"
bincode.workspace = true
bytes = "1.7"
bytemuck.workspace = true
clap.workspace = true
core_affinity = "0.8.3"
crossbeam = "0.8.4"
csv = "*"
dashmap = "6.1.0"
eyre.workspace = true
futures.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-store = { path = "../iris-mpc-store" }
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr = "0.4.3"
rayon.workspace = true
rstest = "0.23.0"
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "*"
siphasher = "1"
socket2 = { version = "0.6.0", features = ["all"] }
statrs = "0.18.0"
sqlx.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-util.workspace = true
metrics = "0.22.1"
tracing.workspace = true
tracing-forest = { git = "https://github.com/QnnOkabayashi/tracing-forest.git", rev = "5683eba", features = [
    "uuid",
    "chrono",
    "smallvec",
    "tokio",
    "serde",
    "env-filter",
] }
tracing-subscriber.workspace = true
tracing-test = "0.2.5"
backon = { version = "1.4.0", default-features = false, features = [
    "tokio-sleep",
] }
rand_chacha = { version = "0.3", features = ["serde1"] }
num_enum = "0.7.3"
tokio-rustls = { version = "0.26.2" }
ampc-secret-sharing.workspace = true
ampc-actor-utils.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
rayon.workspace = true
num_cpus = "1.16.0"

[features]
db_dependent = []
networking_metrics = []
chacha_prf = []

[[bench]]
name = "hnsw"
harness = false

[[bench]]
name = "networking"
harness = false

[[bench]]
name = "set_hash"
harness = false

[[bench]]
name = "dot"
harness = false

[[example]]
name = "hnsw-ex"
