[package]
name = "iris-mpc-gpu"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = { git = "https://github.com/philsippl/cudarc.git", rev = "b824f30", features = [
    "cuda-12020",
] }
eyre.workspace = true
tracing.workspace = true
bytemuck.workspace = true
futures.workspace = true
rayon.workspace = true
itertools.workspace = true
hex.workspace = true
tokio.workspace = true
ring = "0.17.8"
axum.workspace = true
reqwest.workspace = true
num-traits = "0.2"
rand.workspace = true
static_assertions.workspace = true
serde.workspace = true
serde_json.workspace = true

iris-mpc-common = { path = "../iris-mpc-common" }

[dev-dependencies]
criterion = "0.5"
ndarray = "0.16.0"
float_eq = "1"
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []
otp_encrypt = []

#[[bench]]
#name = "chacha"
#harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "transpose"
harness = false
