[package]
name = "iris-mpc-gpu"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode = "1.3.3"
cudarc = { git = "https://github.com/worldcoin/cudarc-fork.git", features = [
    "cuda-12020",
    "nccl",
]}
eyre.workspace = true
tracing.workspace = true
bytemuck.workspace = true
futures.workspace = true
rayon.workspace = true
itertools.workspace = true
hex.workspace = true
tokio.workspace = true
ring = "0.17.8"
axum.workspace = true
reqwest.workspace = true
num-traits.workspace = true
rand.workspace = true
static_assertions.workspace = true
serde.workspace = true
serde_json.workspace = true
sodiumoxide = "0.2.7"
iris-mpc-common = { path = "../iris-mpc-common" }
base64 = "0.22.1"
metrics = "0.22.1"
metrics-exporter-statsd = "0.7"
memmap2.workspace = true

[dev-dependencies]
criterion = "0.5"
ndarray = "0.16.0"
float_eq = "1"
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []
gpu_dependent = []

#[[bench]]
#name = "chacha"
#harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bin]]
name = "nccl"
path = "src/bin/nccl.rs"
