[package]
name = "iris-mpc-gpu"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cudarc.workspace = true
eyre.workspace = true
tracing.workspace = true
bytemuck.workspace = true
futures.workspace = true
rayon.workspace = true
itertools.workspace = true
hex.workspace = true
tokio.workspace = true
ring = "0.17.8"
axum.workspace = true
num-traits.workspace = true
rand.workspace = true
static_assertions.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-cpu = { path = "../iris-mpc-cpu" }
metrics.workspace = true
memmap2.workspace = true
ampc-anon-stats.workspace = true
ampc-server-utils.workspace = true

[dev-dependencies]
criterion = "0.5"
ndarray = "0.16.0"
float_eq = "1"
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []
gpu_dependent = []

[[bench]]
name = "preprocessing"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "transpose"
harness = false
