[package]
name = "iris-mpc-store"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
object_store.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
bytemuck.workspace = true
dotenvy.workspace = true
futures.workspace = true
sqlx.workspace = true
eyre.workspace = true
itertools.workspace = true
tracing.workspace = true
tokio.workspace = true
bytes = "1.7"
rand.workspace = true
ampc-server-utils.workspace = true

[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[features]
db_dependent = []
