[package]
name = "iris-mpc-test-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-prng = { git = "https://github.com/tf-encrypted/aes-prng.git", branch = "dragos/display" }
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
static_assertions.workspace = true
futures.workspace = true
serde_json.workspace = true
telemetry-batteries.workspace = true
eyre.workspace = true
clap.workspace = true
bytemuck.workspace = true
dotenvy.workspace = true
rand.workspace = true
base64.workspace = true
uuid.workspace = true
reqwest.workspace = true
sodiumoxide = "0.2.7"
itertools.workspace = true
metrics = "0.22.1"
metrics-exporter-statsd = "0.7"
serde = { version = "1.0.214", features = ["derive"] }
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-cpu = { path = "../iris-mpc-cpu" }
chrono = "0.4.38"
sqlx.workspace = true
toml = { version = "0.8.23", features = ["preserve_order"] }
async-trait.workspace = true

[[bin]]
name = "generate-iris-codes-plaintext"
path = "bin/generate_iris_codes_plaintext.rs"

[[bin]]
name = "generate-node-toml-from-evars"
path = "bin/generate_node_toml_from_evars.rs"

[[bin]]
name = "generate-serial-ids-for-deletion"
path = "bin/generate_serial_ids_for_deletion.rs"
