[package]
name = "iris-mpc-upgrade-hawk"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-sdk-s3.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
eyre.workspace = true
rand.workspace = true
iris-mpc = { path = "../iris-mpc" }
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-store = { path = "../iris-mpc-store" }
itertools.workspace = true
metrics.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
iris-mpc-cpu.workspace = true
chrono = "0.4.38"
sqlx.workspace = true
toml = { version = "0.8.23", features = ["preserve_order"] }
ampc-server-utils.workspace = true
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }
sodiumoxide.workspace = true

[dev-dependencies]
thiserror.workspace = true
serial_test = "3.2.0"

[features]
default = []
db_dependent = []
